--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,18 @@
+.bigCounter {
+    text-align: center;
+    background: black;
+}
 
+.bigCounter div {
+
+    display: inline-block;
+    font-size: 60px;
+    line-height: 60px;
+    background: black;
+    color: white;
+    padding: 10px;
+    margin: 3px;
+}
 /* 
 
     You can write your own styles here...
